# pixnbt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  endian.h  example.cpp  nbt.cpp  nbt.h
src/: debug.cpp  debug.h  main.cpp
src/nbt/: alltags.h  bytetag.h  compoundtag.h  endian.h  nbt.h  stringtag.h  tag.cpp  tag.h
src/nbt/tags/: alltags.h  bytearraytag.h  bytetag.h  compoundtag.h  doubletag.h  floattag.h  inttag.h  listtag.h  longtag.h  shorttag.h  stringtag.h
src/py/: nbt.py
tags/: alltags.h  bytearraytag.h  bytetag.h  compoundtag.h  doubletag.h  floattag.h  inttag.h  listtag.h  longtag.h  shorttag.h  stringtag.h  tag.cpp  tag.h
